added dynamic world loading system because the plugin still used the old system that f***s up the worlds.